# trying-rename-image

./: .gitignore  excel-writer-v0.ipynb  excel-writer-v1.0.ipynb  main.ipynb  old.ipynb  pyproject.toml
data/: progresivas-mandraqueadas.xlsx  progresivas.xlsx
excel/: ficha_fotos.xlsx  sample.xlsx  ~$ficha_fotos.xlsx
utils/: change-name.py  openpyxl.ipynb  reduce-image-size.ipynb  rename-image.py
