[tool.poetry]
name = "pruebascodigo"
version = "0.1.0"
description = ""
authors = ["eder3232 <eldebar.dk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.1.3"
openpyxl = "^3.1.2"
pillow = "^10.1.0"
piexif = "^1.1.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
